fix: swagger property
